--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcsh 'Vocational education -- Ohio -- Cleveland'
 - !lcsh 'Public schools -- Ohio -- Cleveland'
 - !lcsh 'Industries -- Ohio -- Cleveland'
+- GITenberg
 title: Wage Earning and Education
 url: http://www.gutenberg.org/ebooks/16964
